# chonkle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WASM.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md
bench/chonkle-host/: time_codec.py
bench/python-host/: time_abi_raw.py
bench/rust-host/: Cargo.toml
codec/: README.md
codec/identity-c/: build.zig  codec_impl.c  identity.signature.json  identity.wasm  signature.json
codec/identity-core-c/: .gitignore  build.zig  codec_impl.c  signature.json
codec/shared/: codec.c  codec.h  core_abi.h
codec/tiff-predictor-2-c/: build.zig  codec_impl.c  signature.json  tiff-predictor-2.signature.json  tiff-predictor-2.wasm  tiff_predictor_2.c
codec/zlib-rs/: Cargo.toml  signature.json  zlib.signature.json  zlib.wasm
codec/zlib-rs/src/: bindings.rs  lib.rs
demo/: README.md  chonkle-pipeline.ipynb  tiff-predictor-2-c.wasm
docs/: CACHING.md  CODEC_ABI.md  CODEC_CONTRACT.md  CODEC_RUNTIME.md  DISTRIBUTION.md  OVERVIEW.md  PIPELINE_SCHEMA.md  PLAN_MIXED_CODEC_ARCHITECTURE.md  PROTOSPEC_NOTES.md  README.md  WASM.md
docs/ai/: RECENT_CHANGES.md  REPO_MAP.md  SYSTEM_OVERVIEW.md
docs/decisions/: CANONICAL_ABI_PERF.md  COPY_ELIMINATION.md
docs/design/: CACHING.md  CANONICAL_ABI_PERF.md  CODEC_DISTRIBUTION.md  DATA_COPIES.md  F3_COMPARISON.md  MULTI_MEMORY.md  PIPELINE_TRADEOFFS.md
docs/guides/: COMPONENT_MODEL_C.md  COMPONENT_MODEL_RUST.md  CORE.md  NATIVE.md  README.md
docs/internals/: CACHING.md  CANONICAL_ABI_PERF.md  (+2 more)
notebooks/: demo.ipynb
scripts/: time_codec.py
tests/: conftest.py  test_codecs.py  test_executor.py  test_native_codec.py  test_pipeline.py  test_wasm_download.py  test_wasm_download_integration.py  test_wasm_runner.py  test_wasm_signature.py
(+77 files in other folders)
