[project]
name = "chonkle"
description = "A codec pipeline library for encoding and decoding chunked array data"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0"
dependencies = [
    "numcodecs",
    "numpy",
    "oras",
    "wasmtime",
]

[project.scripts]
chonkle = "chonkle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
ignore = [
    "COM812",  # conflicts with ruff formatter
]
select = [
    'B',
    'BLE',
    'C4',
    'C90',
    'COM',
    'DTZ',
    'E',
    'ERA',
    'F',
    'FA',
    'G',
    'I',
    'INP',
    'N',
    'NPY',
    'PT',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T20',
    'UP',
    'W',

]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
markers = [
    "network: tests that require network access (run with --run-network)",
]

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
explicit_package_bases = true

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pre-commit>=4.0",
    "pre-commit-hooks>=6.0",
    "pytest>=9.0",
    "ruff>=0.15",
]
notebook = [
    "chunk-utils @ git+https://github.com/cylf-dev/chunk-utils.git@v0.1.0",
    "jupyterlab",
    "matplotlib",
]
